# pico_framework

./: .gitignore  CMakeLists.txt  LICENSE
.cmake/api/v1/reply/: cache-v2-039f9f0d591b4ea64ced.json  cache-v2-9d47cdc825bfd97d7ab5.json  cache-v2-ffb592acdf08f3329d2a.json  cmakeFiles-v1-1bdb6f8c43a510ff8622.json  cmakeFiles-v1-26a7506ff42a8195208f.json  cmakeFiles-v1-8fab49ca9dd5a3626668.json  codemodel-v2-08037e568f7d18e54223.json  codemodel-v2-173b1cb52044c24d737a.json  codemodel-v2-3f8f8427e8c0b04d8d0d.json  codemodel-v2-6b5d6d88a4b8be574511.json  codemodel-v2-7df7709eb279f107feee.json  codemodel-v2-9e350c7f45a1684673ff.json  codemodel-v2-ac6e6c9652ce7a1d319a.json  codemodel-v2-ba114b0e2ff41f0ebd34.json  codemodel-v2-c0a8c2c1dea661a788d4.json  codemodel-v2-ea4d8e1cc8e9c8b1d293.json  codemodel-v2-fff02b183b6ac733df55.json  index-2020-10-14T17-34-06-0619.json  index-2020-10-26T20-55-03-0588.json  index-2020-11-06T21-38-24-0725.json  index-2020-11-06T23-49-38-0428.json  index-2020-11-07T02-38-07-0874.json  index-2020-11-07T17-34-37-0368.json  index-2020-11-10T23-28-34-0426.json  index-2020-11-14T03-36-05-0174.json  index-2020-12-15T04-05-19-0370.json  index-2021-01-28T02-53-52-0133.json  index-2021-01-30T02-41-32-0009.json  target-PICOFRAMEWORK-Debug-1a2b3e4e0ef9834f0649.json  target-PICOFRAMEWORK-Debug-5a62196bf255babf2cd6.json  target-PICOFRAMEWORK-Debug-86d1c877d034696f7d51.json  target-PICOFRAMEWORK-Debug-88688a33b172e5042395.json  target-PICOFRAMEWORK-Debug-9e183fa65067ebf1198a.json  target-PICOFRAMEWORK-Debug-9e763a247225b179bc03.json  target-PICOFRAMEWORK-Debug-9e902b1eae04bc7a9f5c.json  target-PICOFRAMEWORK-Debug-a78cbc4d8c09ee52b7de.json  target-PICOFRAMEWORK-Debug-cb01a4285686677ed443.json  target-PICOFRAMEWORK-Debug-cd3955da5ea6c0f174f3.json  target-PICOFRAMEWORK-Debug-d508c4fb9e97de6b24be.json  target-TEST-Debug-097724ffd3a0f6da51d4.json  (+3 more)
libs/stb/: stb_image.h
libs/vma/: vk_mem_alloc.h
shaders/: base.frag  base.frag.spirv  base.vert  base.vert.spirv
src/: CMakeLists.txt  allocator.cpp  allocator.h  device.cpp  device.h  image_factory.cpp  image_factory.h  instance.cpp  instance.h  library.h  pfvk.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  render_pass_builder.cpp  render_pass_builder.h  renderer.cpp  renderer.h  resource_factory.cpp  resource_factory.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h
src/allocator/: abs_allocator.h  allocator.cpp  allocator.h  buddy_tree.cpp  buddy_tree.h  buffer_allocator.cpp  buffer_allocator.h  staging_allocator.cpp  staging_allocator.h
src/allocator/tree/: buddy_node.cpp  buddy_node.h  buddy_tree.cpp  buddy_tree.h
src/device/: device.cpp  device.h  device_queue.h  physical_device.cpp  physical_device.h
src/pipeline/: descriptor_set_layout.cpp  descriptor_set_layout.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  shader.cpp  shader.h  shader_stages.cpp  shader_stages.h  vertex_binding.cpp  vertex_binding.h
src/pipeline/layout/: layout.cpp  layout.h
src/pipeline/layout/binding/: binding.cpp  binding.h  binding_layout.cpp  binding_layout.h  binding_resource.h  buffer_binding_resource.h  uniform_binding.h  uniform_binding_layout.h
src/pipeline/state/: color_blend_state.cpp  color_blend_state.h  depth_stencil_state.cpp  depth_stencil_state.h  dynamic_state.cpp  dynamic_state.h  input_assembly_state.cpp  input_assembly_state.h  multisample_state.cpp  multisample_state.h  pipeline_state.h  rasterization_state.cpp  rasterization_state.h  state_manager.cpp  state_manager.h  vertex_input_state.cpp  vertex_input_state.h  viewport_state.cpp  viewport_state.h
src/primitive/: object_descriptor.cpp  object_descriptor.h
src/renderer/: frame_manager.cpp  frame_manager.h  renderer.cpp  renderer.h
src/renderpass/: render_pass.cpp  render_pass.h  render_pass_builder.cpp  render_pass_builder.h
src/resources/: alloc_objects.h  allocator.cpp  allocator.h  asset_reader.cpp  asset_reader.h  data_transfer_manager.cpp  data_transfer_manager.h  resource_factory.cpp  resource_factory.h  resource_reader.cpp  resource_reader.h
src/swapchain/: swapchain.cpp  swapchain.h
src/window/: abs_window_manager.cpp  abs_window_manager.h  glfw_window_manager.cpp  glfw_window_manager.h  i_window_manager.h  window_manager.cpp  window_manager.h
test/: CMakeLists.txt  TEST  instance_test.cpp  main.cpp
test/window/: glfw_window_manager.cpp  glfw_window_manager.h
